--- a/index.html
+++ b/index.html
@@ -13,14 +13,78 @@
             padding: 20px;
             font-size: 2em;
         }
+        .hero {
+            text-align: center;
+            padding: 40px;
+            background-color: #155824;
+            color: white;
+        }
+        .hero h1 {
+            font-size: 2.5em;
+            margin-bottom: 10px;
+        }
+        .hero p {
+            font-size: 1.5em;
+            margin-bottom: 20px;
+        }
+        .hero .cta-button {
+            padding: 15px 30px;
+            background-color: #ddcf0e;
+            color: black;
+            text-decoration: none;
+            font-size: 1.2em;
+            border-radius: 5px;
+        }
+        .why-marie {
+            background-color: #e8f5e9;
+            padding: 40px;
+            text-align: center;
+        }
+        .why-marie h2 {
+            margin-bottom: 20px;
+            font-size: 2.5em;
+            font-weight: bold;
+            color: #155824;
+        }
+        .why-marie-content {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            gap: 30px;
+        }
+        .why-item {
+            flex: 1;
+            max-width: 300px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease-in-out;
+        }
+        .why-item:hover {
+            transform: scale(1.05);
+        }
+        .why-icon {
+            width: 60px;
+            height: 60px;
+            margin-bottom: 20px;
+        }
+        .why-item h3 {
+            font-size: 1.5em;
+            margin-bottom: 10px;
+            color: #155824;
+        }
+        .why-item p {
+            font-size: 1.1em;
+            color: #333;
+            line-height: 1.5;
+        }
         .products {
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
             gap: 20px;
             margin: 20px;
-            flex-direction: row;
-            padding: 0 10px;
         }
         .product {
             background-color: white;
@@ -116,24 +180,13 @@
         footer a:hover {
             text-decoration: underline;
         }
-        /* Responsive design */
-        @media (max-width: 768px) {
-            header {
-                font-size: 1.5em;
-            }
-            .products {
-                flex-direction: column;
-                align-items: center;
-            }
+        .testimonials {
+            background-color: #f1f1f1;
+            padding: 40px;
+            text-align: center;
         }
-        @media (max-width: 480px) {
-            header {
-                font-size: 1.2em;
-            }
-            .product {
-                width: 80%;
-                margin-bottom: 20px;
-            }
+        .testimonials h2 {
+            margin-bottom: 20px;
         }
         /* Toast Notification */
         #toast {
@@ -155,28 +208,47 @@
         <h1>MARIE CUSTOM GOODS - NCR</h1>
     </header>
 
+    <div class="hero">
+        <h1>Marie Custom Goods</h1>
+        <p>Your go-to shop for personalized prints & custom products</p>
+        <a href="#products" class="cta-button">Start Designing</a>
+    </div>
+
+    <div class="why-marie">
+        <h2>Why Marie Custom Goods?</h2>
+        <div class="why-marie-content">
+            <div class="why-item">
+                <img src="https://i.ibb.co/4YcMztF/creative-icon.png" alt="Unlimited Customization" class="why-icon">
+                <h3>Unlimited Customization</h3>
+                <p>Choose from a wide range of products and create your unique design with our easy-to-use online tool. Whether it's text, images, logos, or colors, the possibilities are endless.</p>
+            </div>
+            <div class="why-item">
+                <img src="https://i.ibb.co/KmzV8PL/quality-icon.png" alt="Premium Quality Prints" class="why-icon">
+                <h3>Premium Quality Prints</h3>
+                <p>Our prints feature high-definition quality with vibrant colors. We use durable materials, ensuring that your custom items not only look fantastic but last long, even with frequent use.</p>
+            </div>
+            <div class="why-item">
+                <img src="https://i.ibb.co/6rGgBpS/clock-icon.png" alt="Fast Turnaround" class="why-icon">
+                <h3>Fast Turnaround</h3>
+                <p>We understand the importance of time. That's why we ensure a quick turnaround for all orders. Expect your custom goods to be ready in as little as 48 hours, or sooner if needed.</p>
+            </div>
+        </div>
+    </div>
+
     <div class="products">
         <!-- Product 1 -->
-        <div class="product" data-aos="fade-up" data-aos-delay="100">
+        <div class="product">
             <img src="https://i.ibb.co/p6KCFY5y/2.png" alt="Custom T-Shirt">
             <h2>Custom T-Shirt</h2>
             <p>Start From: ₱129.00/pc</p>
-            <div>
-                <label for="tshirt-text">Add your text:</label>
-                <input type="text" id="tshirt-text" placeholder="e.g. Your Name" />
-            </div>
-            <div>
-                <label for="tshirt-color">Pick a color:</label>
-                <input type="color" id="tshirt-color" value="#ffffff" />
-            </div>
             <label for="tshirt-qty">Quantity:</label>
             <input type="number" id="tshirt-qty" class="quantity" value="1" min="1" />
-            <button class="button" onclick="addToCart('Custom T-Shirt', 129.00, document.getElementById('tshirt-qty').value, document.getElementById('tshirt-text').value, document.getElementById('tshirt-color').value)">Add to Cart</button>
+            <button class="button" onclick="addToCart('Custom T-Shirt', 129.00, document.getElementById('tshirt-qty').value)">Add to Cart</button>
             <button class="button" onclick="window.location.href='https://t.me/MarieGTBot'">Request Bulk Discount</button>
         </div>
 
         <!-- Product 2 -->
-        <div class="product" data-aos="fade-up" data-aos-delay="200">
+        <div class="product">
             <img src="https://i.ibb.co/TB9Nhr8T/1.png" alt="Custom Coffee Mug">
             <h2>Custom Mug</h2>
             <p>Start From: ₱79.00/pc</p>
@@ -187,7 +259,7 @@
         </div>
 
         <!-- Product 3 -->
-        <div class="product" data-aos="fade-up" data-aos-delay="300">
+        <div class="product">
             <img src="https://i.ibb.co/gLvmgNmf/3.png" alt="Custom Hat">
             <h2>Custom Hat</h2>
             <p>Start From: ₱99.00/pc</p>
@@ -198,7 +270,7 @@
         </div>
 
         <!-- Product 4 -->
-        <div class="product" data-aos="fade-up" data-aos-delay="400">
+        <div class="product">
             <img src="https://i.ibb.co/zL0N1v3/5.png" alt="Custom Sling Bag">
             <h2>Custom Bag</h2>
             <p>Start From: ₱229.00/pc</p>
@@ -209,7 +281,7 @@
         </div>
 
         <!-- Product 5 -->
-        <div class="product" data-aos="fade-up" data-aos-delay="500">
+        <div class="product">
             <img src="https://i.ibb.co/QjT7G3NS/6.png" alt="Custom Phone Case">
             <h2>Custom Phone Case</h2>
             <p>Start From: ₱39.00/pc</p>
@@ -220,57 +292,60 @@
         </div>
 
         <!-- Product 6 -->
-        <div class="product" data-aos="fade-up" data-aos-delay="600">
+        <div class="product">
             <img src="https://i.ibb.co/sdX5bsDZ/4.png" alt="Custom Baseball Jacket">
-            <h2>Custom Baseball Jacket</h2>
+            <h2>Custom Hat</h2>
             <p>Start From: ₱309.00/pc</p>
-            <label for="jacket-qty">Quantity:</label>
-            <input type="number" id="jacket-qty" class="quantity" value="1" min="1" />
+            <label for="hat-qty">Quantity:</label>
+            <input type="number" id="hat-qty" class="quantity" value="1" min="1" />
             <button class="button" onclick="addToCart('Custom Jacket', 309.00, document.getElementById('jacket-qty').value)">Add to Cart</button>
             <button class="button" onclick="window.location.href='https://t.me/MarieGTBot'">Request Bulk Discount</button>
         </div>
 
         <!-- Product 7 -->
-        <div class="product" data-aos="fade-up" data-aos-delay="700">
+        <div class="product">
             <img src="https://i.ibb.co/nd1jSXJ/7.png" alt="Custom Towel">
-            <h2>Custom Towel</h2>
+            <h2>Custom Bag</h2>
             <p>Start From: ₱139.00/pc</p>
-            <label for="towel-qty">Quantity:</label>
-            <input type="number" id="towel-qty" class="quantity" value="1" min="1" />
-            <button class="button" onclick="addToCart('Custom Towel', 139.00, document.getElementById('towel-qty').value)">Add to Cart</button>
+            <label for="bag-qty">Quantity:</label>
+            <input type="number" id="bag-qty" class="quantity" value="1" min="1" />
+            <button class="button" onclick="addToCart('Custom Towel', 139.00, document.getElementById('bag-qty').value)">Add to Cart</button>
             <button class="button" onclick="window.location.href='https://t.me/MarieGTBot'">Request Bulk Discount</button>
         </div>
 
         <!-- Product 8 -->
-        <div class="product" data-aos="fade-up" data-aos-delay="800">
+        <div class="product">
             <img src="https://i.ibb.co/gMWpVnxH/8.png" alt="Custom Hotel Slipper">
-            <h2>Custom Hotel Slipper</h2>
-            <p>Start From: ₱35.00/pc</p>
-            <label for="slipper-qty">Quantity:</label>
-            <input type="number" id="slipper-qty" class="quantity" value="1" min="1" />
-            <button class="button" onclick="addToCart('Custom Hotel Slipper', 35.00, document.getElementById('slipper-qty').value)">Add to Cart</button>
+            <h2>Custom Phone Case</h2>
+            <p>Start From: ₱150.00/pc</p>
+            <label for="phone-case-qty">Quantity:</label>
+            <input type="number" id="phone-case-qty" class="quantity" value="1" min="1" />
+            <button class="button" onclick="addToCart('Custom Hotel Slipper', 39.00, document.getElementById('phone-case-qty').value)">Add to Cart</button>
             <button class="button" onclick="window.location.href='https://t.me/MarieGTBot'">Request Bulk Discount</button>
         </div>
     </div>
 
-    <!-- Cart Summary -->
+    <div class="testimonials">
+        <h2>Testimonials</h2>
+        <p>“I love my custom t-shirt! The print quality is amazing, and the fit is perfect.” — Carla M., Quezon City</p>
+        <p>“Marie Custom Goods made a beautiful canvas print for my office. It’s exactly what I envisioned!” — John R., Pasig</p>
+    </div>
+
     <div class="cart">
         <h3>Your Cart <span class="cart-count">0</span></h3>
         <ul id="cart-items"></ul>
         <button class="button" onclick="checkout()">Checkout</button>
     </div>
 
-    <!-- Toast Notification -->
     <div id="toast">Added to cart!</div>
 
     <footer>
-        <p>&copy; 2025 MARIE CUSTOM GOODS - NCR. All rights reserved. <br>For inquiries, contact us at <a href="mailto:info@mariecustomgoods.com">info@mariecustomgoods.com</a></p>
+        <p>&copy; 2025 MARIE CUSTOM GOODS - NCR. All rights reserved. <br>For inquiries, contact us at <a href="mailto:contact@mariecustomgoods.com">contact@mariecustomgoods.com</a></p>
     </footer>
 
     <script>
         let cart = [];
 
-        // Function to add items to the cart
         function addToCart(itemName, price, quantity, customText = "", customColor = "") {
             quantity = parseInt(quantity);
             let item = { itemName, price, quantity, customText, customColor, totalPrice: price * quantity };
@@ -279,7 +354,6 @@
             showToast();
         }
 
-        // Update the cart UI
         function updateCart() {
             let cartItems = document.getElementById("cart-items");
             let cartCount = document.querySelector(".cart-count");
@@ -293,31 +367,25 @@
                 total += item.totalPrice;
             });
 
-            // Update cart item count
             cartCount.textContent = cart.length;
 
-            // Optionally add the total at the bottom
             let totalItem = document.createElement("li");
             totalItem.textContent = `Total: ₱${total.toFixed(2)}`;
             cartItems.appendChild(totalItem);
 
-            // Persist the cart in localStorage
             localStorage.setItem('cart', JSON.stringify(cart));
         }
 
-        // Toast Notification on Add to Cart
         function showToast() {
             const toast = document.getElementById('toast');
             toast.style.display = 'block';
             setTimeout(() => toast.style.display = 'none', 2000);
         }
 
-        // Checkout function (send details to Telegram)
         function checkout() {
             let orderSummary = "Order Summary:\n";
             let total = 0;
 
-            // Create the order details for Telegram
             cart.forEach(item => {
                 orderSummary += `${item.itemName} x ${item.quantity} - ₱${item.totalPrice.toFixed(2)}\n`;
                 total += item.totalPrice;
@@ -326,14 +394,10 @@
             orderSummary += `\nTotal: ₱${total.toFixed(2)}`;
             orderSummary += "\n\nPlease confirm your order.";
 
-            // Telegram bot link
             let telegramBotLink = "https://t.me/MarieGTBot?text=" + encodeURIComponent(orderSummary);
-
-            // Redirect to Telegram with the order message
             window.location.href = telegramBotLink;
         }
 
-        // Cart Persistence with localStorage
         window.onload = function() {
             const savedCart = localStorage.getItem('cart');
             if (savedCart) {
