--- a/index.html
+++ b/index.html
@@ -209,31 +209,31 @@
 </head>
 <body>
     <header>
-        <h1>MARIE CUSTOM GOODS - NCR</h1>
+        <h1>MCG - NCR</h1>
     </header>
 
     <div class="hero">
-        <h1>Marie Custom Goods</h1>
+        <h1>MARIE CUSTOM GOODS</h1>
         <p>Your go-to shop for personalized prints & custom products</p>
         <a href="#products" class="cta-button">Start Designing</a>
     </div>
 
     <div class="why-marie">
-        <h2>Why Marie Custom Goods?</h2>
+        <h2>Why PRINT with us?</h2>
         <div class="why-marie-content">
             <div class="why-item">
-                <img src="https://i.ibb.co/4YcMztF/creative-icon.png" alt="Unlimited Customization" class="why-icon">
+                <img src="https://i.ibb.co/0pxHp7H2/1.png" alt="Unlimited Customization" class="why-icon">
                 <h3>Unlimited Customization</h3>
                 <p>Choose from a wide range of products and create your unique design with our easy-to-use online tool. Whether it's text, images, logos, or colors, the possibilities are endless.</p>
             </div>
             <div class="why-item">
-                <img src="https://i.ibb.co/KmzV8PL/quality-icon.png" alt="Premium Quality Prints" class="why-icon">
+                <img src="https://i.ibb.co/vxgKxLhn/2.png" alt="Premium Quality Prints" class="why-icon">
                 <h3>Premium Quality Prints</h3>
                 <p>Our prints feature high-definition quality with vibrant colors. We use durable materials, ensuring that your custom items not only look fantastic but last long, even with frequent use.</p>
             </div>
             <div class="why-item">
-                <img src="https://i.ibb.co/6rGgBpS/clock-icon.png" alt="Fast Turnaround" class="why-icon">
-                <h3>Fast Turnaround</h3>
+                <img src="https://i.ibb.co/7Jch33KP/3.png" alt="Fast Delivery" class="why-icon">
+                <h3>Fast Delivery</h3>
                 <p>We understand the importance of time. That's why we ensure a quick turnaround for all orders. Expect your custom goods to be ready in as little as 48 hours, or sooner if needed.</p>
             </div>
         </div>
@@ -331,11 +331,11 @@
 
     <div class="testimonials">
         <h2>TESTIMONIALS</h2>
-        <p>“I love my custom t-shirt! The print quality is amazing, and the fit is perfect.” — Carla M., Quezon City</p>
-        <p>“Marie Custom Goods made a beautiful canvas print for my office. It’s exactly what I envisioned!” — John R., Pasig</p>
-        <p>“The custom mug I ordered is fantastic! The colors are vibrant and it’s the perfect gift for my friend. Highly recommend!” — Maria L., Makati</p>
-        <p>“Fast shipping and high-quality prints. The custom phone case fits my phone perfectly, and I love the design. Will definitely order again!” — Grace F., Quezon City</p>
-        <p>“I was looking for a personalized gift for my sister’s birthday, and the custom t-shirt from Marie Custom Goods was a huge hit! She loved it.” — Joseph D., Parañaque</p>
+        <p><em>“I love my custom t-shirt! The print quality is amazing, and the fit is perfect.”</em> — Carla M., Quezon City</p>
+        <p><em>“Marie Custom Goods made a beautiful canvas print for my office. It’s exactly what I envisioned!”</em> — John R., Pasig</p>
+        <p><em>“The custom mug I ordered is fantastic! The colors are vibrant and it’s the perfect gift for my friend. Highly recommend!”</em> — Maria L., Makati</p>
+        <p><em>“Fast shipping and high-quality prints. The custom phone case fits my phone perfectly, and I love the design. Will definitely order again!”</em> — Grace F., Quezon City</p>
+        <p><em>“I was looking for a personalized gift for my sister’s birthday, and the custom t-shirt from Marie Custom Goods was a huge hit! She loved it.”</em> — Joseph D., Parañaque</p>
     </div>
 
     <div class="cart">
